# patchwise_inpainting_zcurves

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: CopyInpaintingDlls.cmake  FindInpaintingDependencies.cmake
frontend/: CMakeLists.txt
frontend/src/: ConsoleProgressReporter.cpp  ConsoleProgressReporter.h  InpaintingFrontEnd.cpp  InpaintingFrontEnd.h  IntermediateOutputProgressReporter.cpp  IntermediateOutputProgressReporter.h  main.cpp
frontend/src/setup/: InpaintingParameterSet.cpp  InpaintingParameterSet.h  InpaintingParameterSource.cpp  InpaintingParameterSource.h
libInpainting/: CMakeLists.txt
libInpainting/src/: IndexInterval.cpp  IndexInterval.h  InpaintingOperator.cpp  InpaintingOperator.h  NDSpaceMapping.cpp  NDSpaceMapping.h  Problem.cpp  Problem.h  ProgressReporter.cpp  ProgressReporter.h  StatusFlags.h  stdafx.h
libInpainting/src/computeorder/: BWCriminisiOrder.cpp  BWCriminisiOrder.h  ComputeFront.cpp  ComputeFront.h  ComputeFrontEntry.cpp  ComputeFrontEntry.h  ComputeFrontInitializer.cpp  ComputeFrontInitializer.cpp.orig  ComputeFrontInitializer.h  ComputeOrder.cpp  ComputeOrder.h  Confidence.cpp  Confidence.h  ConfidenceOrder.cpp  ConfidenceOrder.h  CriminisiDataTerm.cpp  CriminisiDataTerm.h  CriminisiOrder.cpp  CriminisiOrder.h  DataTerm.cpp  DataTerm.h  Gradient2D.cpp  Gradient2D.h  Gradient3D.cpp  Gradient3D.h  HighConfidenceOrder.cpp  HighConfidenceOrder.h  MissingWedgeOrder.cpp  MissingWedgeOrder.h  MultiChannelCriminisiOrder.cpp  MultiChannelCriminisiOrder.h  MultiChannelDataTerm.cpp  MultiChannelDataTerm.h  RGBCriminisiOrder.cpp  RGBCriminisiOrder.h  RGBDataTerm.cpp  RGBDataTerm.h
libInpainting/src/costfunction/: DictionaryBasedCostFunctionKernel.cpp  DictionaryBasedCostFunctionKernel.h  FusingL1CostFunction.cpp  FusingL1CostFunction.h  FusingL2CostFunction.cpp  FusingL2CostFunction.h  L1CostFunction.cpp  L1CostFunction.h  L1Distance.cpp  L1Distance.h  L2CostFunction.cpp  L2CostFunction.h  L2CostFunctionWithWeight.cpp  L2CostFunctionWithWeight.h  L2Distance.cpp  L2Distance.h  L2DistanceWithWeight.cpp  L2DistanceWithWeight.h  LPDistance.cpp  LPDistance.h
libInpainting/src/dictionary/: Dictionary.cpp  Dictionary.h  FullDictionaryBuilder.cpp  FullDictionaryBuilder.h  MaskedDictionaryBuilder.cpp  MaskedDictionaryBuilder.h  SelectionReport.cpp  SelectionReport.h
libInpainting/src/idistance/: IDistance.cpp  IDistance.h  IDistanceIndex.cpp  IDistanceIndex.h  definitions.h  helper.cpp  helper.h
libInpainting/src/idistance/stx/: btree.h  btree_multimap.h
libInpainting/src/idistance/sys/: time.cpp  times.h
libInpainting/src/index/: DimensionSelection.cpp  DimensionSelection.h  FilterAndRefine.cpp  FilterAndRefine.h  Index.cpp  Index.h  MaskedIndex.cpp  MaskedIndex.h  MultiIndex.cpp  MultiIndex.h  NDPointPair.cpp  NDPointPair.h  PatchAccess8Bit.cpp  PatchAccess8Bit.h  SubspaceProjection.cpp  SubspaceProjection.h
libInpainting/src/io/: Serializable.cpp  Serializable.h
libInpainting/src/math/: Approximate.h
libInpainting/src/patchselection/: CurveBasedPatchSelection.cpp  CurveBasedPatchSelection.h  Log.cpp  Log.h  PatchMatchPatchSelection.cpp  PatchMatchPatchSelection.h  PatchSelection.cpp  PatchSelection.h  PatchSelectionStatistics.cpp  PatchSelectionStatistics.h
libInpainting/src/pca/: IdentitySubspace.cpp  IdentitySubspace.h  PCASubspace.cpp  PCASubspace.h
libInpainting/src/setup/: CostFunctionOptions.cpp  CostFunctionOptions.h  IndexOptions.cpp  IndexOptions.h  InpaintingDebugParameters.cpp  InpaintingDebugParameters.h  InpaintingOptimizationParameters.cpp  InpaintingOptimizationParameters.h
libInpainting/src/test/: DictionaryDebugOutput.cpp  DictionaryDebugOutput.cpp.orig  DictionaryDebugOutput.h
libInpainting/src/zcurve/: DataSet.cpp  DataSet.h  KNNCandidate.cpp  KNNCandidate.h  ParallelKNNQuery.cpp  ParallelKNNQuery.h  PatchAccess16Bit.h  PresortedDataSet.cpp  PresortedDataSet.h  ZCurveEntry.cpp  ZCurveEntry.h  ZCurveIndex.cpp  ZCurveIndex.h  ZCurveKNNQuery.cpp  ZCurveKNNQuery.h  ZCurveOperator.cpp  ZCurveOperator.h
test/: CMakeLists.txt  CMakeTests.txt
test/data/64x64phantom/: fillfrontVolume.mrc  phantom_64.mrc  phantom_64_mask.mrc  phantom_64_mask_inverted.mrc  phantom_64_sinogram.mrc  phantom_64_sinogram_mask.mrc  phantom_64_sinogram_mask_shifted.mrc  phantom_64_sinogram_shifted.mrc
test/data/integrationTestData/: data.mrc  dictionary.mrc  duke_256_groundTruthGivenInDictionary_perfectInpainting.mrc  duke_2D_data_withBorder.mrc  duke_2D_mask_withBorder.mrc  duke_2D_perfectInpainting.mrc  duke_3D_big_data_withBorder.mrc  duke_3D_big_dictionary_withBorder.mrc  duke_3D_big_mask_withBorder.mrc  mask.mrc  stripes_3D_data_forDebugging.mrc  stripes_3D_dictionary_forDebugging.mrc  stripes_3D_dictionary_forDebugging2.mrc  stripes_3D_dictionary_forDebugging3.mrc  stripes_3D_inpainted_forDebugging.mrc  stripes_3D_mask_forDebugging.mrc
test/data/lena/: lena512_bw_erased.tif  lena512_mask.mrc  lena512_mask.tif
test/data/multiindex/: data.mrc  dictionary.mrc  index_bottom.mrc  index_bottom_left.mrc  index_bottom_right.mrc  index_center(2D).mrc  index_center(3D).mrc  index_corner_0_0_0.mrc  index_corner_0_0_1.mrc  index_corner_0_1_0.mrc  index_corner_0_1_1.mrc  mask.mrc  (+12 more)
test/work/: confidenceVolume.mrc  dataTerm.mrc  data_inpainted.mrc  duke_2D_inpainted.mrc  duke_3D_big_inpainted.mrc  fillfront_after_updatestep.mrc  fillfront_before_updatestep.mrc  frontVolume6Values.mrc  index_bottom_left.mrc  index_bottom_right.mrc  index_center(2D).mrc  index_center(3D).mrc  index_corner_0_0_0.mrc  index_corner_0_0_1.mrc  index_corner_0_1_0.mrc  index_corner_0_1_1.mrc  index_corner_1_0_0.mrc  index_corner_1_0_1.mrc  index_corner_1_1_0.mrc  index_corner_1_1_1.mrc  index_face_0_0_N.mrc  index_face_0_0_P.mrc  index_face_0_P_0.mrc  index_face_N_0_0.mrc  index_face_P_0_0.mrc  index_standard.mrc  index_top.mrc  index_top_left.mrc  index_top_right.mrc  multi.index  priority.mrc  reliableMaskStatus.mrc  stripes_3D_inpainted_forDebugging.mrc  topleft.pca  topleft.zcurve  updatedData.mrc  updatedData_AccordingToSSD.mrc
(+116 files in other folders)
